# python-scripts

./: .env.example  .gitignore  LICENSE  Paper Analyzer.md  README.md  batch_paper_analyzer.py  github_watchdog.py  index.html  main.py  markdown_toc.py  mitm_addon.py  parse.py  pydantic_FileSyncedModel.py  pyproject.toml  requirements.txt  run.sh  thunder_link_parse.py  watchdog.py  ws_protocol.md
backend/: config.py  parser.py  renderer.py  structs.py
