[project]
name = "thunder-link-parse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "msgpack>=1.1.2",
    "msgspec>=0.20.0",
    "pillow>=12.1.1",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.2.2",
]
